# stfc-nexus

./: .opf.yml  README.md
checksum/: md5Checksum.py
raw2nexus/: README
scripts/: README.txt  createInputFileChecksumTest.sh  createInputFileConvertTest.sh  createInputFileFidoTest.sh  createInputFileRaw2NeXusTest.sh  createInputFileValidateTest.sh  createListOfInputFilesRaw.sh  createTestFiles.sh  tomarWorkflowLaunchertest
src/Raw2NeXus/Source/: CMakeLists.txt  SaveISISNeXus.cpp  SaveISISNeXus.h  main.cpp
src/Raw2NeXus/Source/LoadRaw/: byte_rel_comp.cpp  byte_rel_comp.h  isisraw.cpp  isisraw.h  isisraw2.cpp  isisraw2.h  vms_convert.cpp  vms_convert.h
src/checksum/: md5Checksum.py
toolspec/: checksum.xml  convert.xml  fido.xml  raw2nexus.xml  validate.xml
toolwrapper/: README
toolwrapper/specfiles/: nxchecksum.changelog  nxchecksum.component  nxchecksum.xml  nxconvert.changelog  nxconvert.component  nxconvert.xml  nxvalidate.changelog  nxvalidate.component  nxvalidate.xml  raw2nexus.changelog  raw2nexus.component  raw2nexus.xml
validator/: nexusSchematron.sch
